# gpu-sumcheck

./: .gitignore  Cargo.toml
src/: gpu.rs  lib.rs  main.rs  sumcheck.rs
src/poly/: gpu.rs  mod.rs  plain.rs
src/sumcheck/: gpu.rs  mod.rs  plain.rs  simd.rs
