[package]
name = "poly-bind-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-std = "0.4.0"
icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0"}
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0", features = ["arkworks"]}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0", features = ["arkworks"]}
rayon = "1.10.0"
tracing-subscriber = "0.3.18"
tracing-texray = "0.2.0"
tracing = "0.1.40"

[patch."https://github.com/ingonyama-zk/icicle.git"]
icicle-cuda-runtime = { path = "/root/icicle/wrappers/rust/icicle-cuda-runtime" }
icicle-core = { path = "/root/icicle/wrappers/rust/icicle-core" }
icicle-bn254 = { path = "/root/icicle/wrappers/rust/icicle-curves/icicle-bn254" }