[package]
name = "poly-bind-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-std = "0.4.0"
rayon = "1.10.0"
tracing-subscriber = "0.3.18"
tracing-texray = "0.2.0"
tracing = "0.1.40"
vectorized-fields = { git = "https://github.com/a16z/vectorized-fields.git" }

[target.'cfg(feature = "gpu")'.dependencies]
icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0", features = ["arkworks"] }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0", features = ["arkworks"] }


[features]
gpu = []
